infrastructure/base/gateway/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: tls-grant
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: kgateway-system
  to:
    - group: ""
      kind: Secret
      name: GATEWAY_SECRET_NAME
