infrastructure/base/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gateway-route
spec:
  parentRefs:
    - name: gateway-listeners
      kind: ListenerSet
      group: gateway.networking.k8s.io
      sectionName: https
  hostnames:
    - GATEWAY_HOSTNAME
  rules:
    - backendRefs:
        - name: GATEWAY_SERVICE_NAME
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
